--- a/ICLReader.html
+++ b/ICLReader.html
@@ -30,6 +30,10 @@
       var center = [unit2Px * 2, unit2Px * 2];
       var touristNum = 0;
 
+      var selectDown;
+      var selectText;
+      var selectUp;
+
       var tourColors = [];
       var tourists = [];
 
@@ -46,15 +50,13 @@
       var fieldExit = [center[0] + unit2Px * Math.cos(exitAngle * (Math.PI / 180)),
                        center[1] + unit2Px * Math.sin(exitAngle * (Math.PI / 180))];
       var wireless = true;
-      var sendSignal = 0;
+      var sendSignal = 2;
       var instruBinder = [
                           [[0, [45]], [2, ['left']]],
                           [[0, [-125]], [1, [null]]],
                           [[0, [170]], [3, [1]], [2, ['right']]],
                           [[0, [87]], [4, ['left', 60]], [1, [null]]],
-                          [[0, [30]], [4, ['right', 60]], [5, [null]], [1, [null]]],
-                          [[0, [270]],[6, [null]]],
-                          [[6, [null]]]
+                          [[0, [30]], [4, ['right', 60]], [5, [null]], [1, [null]]]
                          ];
 
       //////////--------Instantiate Call Functions--------//////////
@@ -114,7 +116,9 @@
           } else {
             fxs[this.instru[this.on][0]](this, this.instru[this.on][1]);
             if (Math.sqrt(Math.pow(fieldExit[1] - this.y ,2) + Math.pow(fieldExit[0] - this.x ,2)) < (unit2Px / fps)) {
-              sendSignal++;
+              if (sendSignal < 1) {
+                sendSignal++;
+              }
             }
           }
         }
@@ -265,13 +269,14 @@
 
 
       function Start() {
-//Visuals
+//Background Visuals
         fieldSVG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4)
                      .style("float", "left").style("border", "1px solid black");
         graphSVG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4)
                      .style("float", "left").style("border", "1px solid black");
         fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1]).attr("r", unit2Px)
                 .style("fill-opacity", 0.0).style("stroke", "#000000");
+//Tourist Visuals
         for (i = 0; i < instruBinder.length; i++) {
           tourColors.push(RandomColor());
           tourists.push(new Tourist(fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1])
@@ -282,6 +287,8 @@
                          .style("fill", tourColors[i]));
           graphLines.push([]);
         }
+
+//Unit Circle Visuals
         fieldSVG.append("circle").attr("cx", center[0]).attr("cy", center[1]).attr("r", 2).style("fill", "#000000");
         fieldSVG.append("circle").attr("cx", fieldExit[0]).attr("cy", fieldExit[1]).attr("r", 2).style("fill", "#000000");
         fieldSVG.append("line").attr("x1", 2 * unit2Px).attr("y1", unit2Px).attr("x2",  2 * unit2Px).attr("y2", 3 * unit2Px)
@@ -308,6 +315,16 @@
                              .attr("visibility", "hidden").style("fill", "#ff0000")
                              .on("click", () => {projector = setInterval(ReverseAnim, 1000 / fps);});
         projector = setInterval(LoadAnim, 1000 / fps);
+
+//Tourist Info Visual
+        selectDown = graphSVG.append("path").attr("d", 'M' + unit2Px * (1 / 25) + ',' + unit2Px * (6 / 25) + 'L' + unit2Px * (6 / 25) + ',' + unit2Px * (1 / 25)
+                                                + 'L' + unit2Px * (6 / 25) + ',' + unit2Px * (11 / 25) + 'L' + unit2Px * (1 / 25) + ',' + unit2Px * (6 / 25))
+                     .attr("visibility", "hidden").style("fill", "0000ff").on("click", () => {UpdateInfo(-1);});
+        selectText = graphSVG.append("text").attr("x", unit2Px * (13 / 25)).attr("y", unit2Px * (8 / 25)).attr("text-anchor", "middle")
+                     .attr("visibility", "hidden").style("font-size", unit2Px * (7 / 25)).style("fill", "0000ff").text("1");
+        selectUp = graphSVG.append("path").attr("d", 'M' + unit2Px * (25 / 25) + ',' + unit2Px * (6 / 25) + 'L' + unit2Px * (20 / 25) + ',' + unit2Px * (1 / 25)
+                                                   + 'L' + unit2Px * (20 / 25) + ',' + unit2Px * (11 / 25) + 'L' + unit2Px * (25 / 25) + ',' + unit2Px * (6 / 25))
+                   .attr("visibility", "hidden").style("fill", "0000ff").on("click", () => {UpdateInfo(1);});
       }
 
 //Create a random hexadecimal color
@@ -325,6 +342,10 @@
         if (time > timeMax) {
           timeRewind.attr("visibility", "visible");
           timeSlide.attr("visibility", "visible");
+          selectDown.attr("visibility", "visible");
+          selectText.attr("visibility", "visible");
+          selectUp.attr("visibility", "visible");
+          UpdateInfo(0);
           clearInterval(projector);
         } else {
           tourists.forEach((tourist) => {
@@ -418,6 +439,24 @@
           }
           timeSlide.attr("x", (time / timeMax) * (31 / 8) * unit2Px);
         }
+      }
+
+      function UpdateInfo(delta) {
+        tourists[selectText.text() - 1].visual.style("stroke", "none").style("fill-opacity", 1);
+        graphDots[selectText.text() - 1].style("stroke", "none").style("fill-opacity", 1);
+        tourLine[selectText.text() - 1].style("stroke-opacity", 0.5);
+        graphLine[selectText.text() - 1].style("stroke-opacity", 0.5);
+        delta += +selectText.text();
+        if (delta < 1) {delta = 1;}
+        else if (delta > tourists.length) {delta = tourists.length;}
+        selectText.text(delta);
+        tourists[delta - 1].visual.style("stroke", "#000000").style("stroke-width", unit2Px / 20).style("fill-opacity", 0.5);
+        graphDots[delta - 1].style("stroke", "#000000").style("stroke-width", unit2Px / 20).style("fill-opacity", 0.5);
+        tourLine[delta - 1].style("stroke-opacity", 1).raise();
+        graphLine[delta - 1].style("stroke-opacity", 1).raise();
+        selectUp.style("fill", tourColors[delta - 1]);
+        selectText.style("fill", tourColors[delta - 1]);
+        selectDown.style("fill", tourColors[delta - 1]);
       }
 
       //////////----------Initial Function Call----------//////////
