--- a/interface_alt.html
+++ b/interface_alt.html
@@ -5,12 +5,110 @@
 </head>
 
 <body>
+    <style>
+
+            * { box-sizing: border-box; }
+        body {
+          font: 16px Arial;
+        }
+        .autocomplete {
+          /*the container must be positioned relative:*/
+          position: relative;
+          display: inline-block;
+        }
+        input {
+          border: 1px solid transparent;
+          background-color: #f1f1f1;
+          padding: 10px;
+          font-size: 16px;
+        }
+        input[type=text] {
+          background-color: #f1f1f1;
+        }
+        input[type=submit] {
+          background-color: DodgerBlue;
+          color: #fff;
+        }
+        button {
+            background-color: DodgerBlue;
+            color: #fff;
+        }
+
+        input.reset {
+            background-color: Red;
+            color: #fff;
+        }
+
+        input.copypaste {
+            background-color: #ccc;
+            color: #000;
+        }
+
+        .autocomplete-items {
+          position: relative;
+          border: 1px solid #d4d4d4;
+          border-bottom: none;
+          border-top: none;
+          z-index: 99;
+          /*position the autocomplete items to be the same width as the container:*/
+          top: 100%;
+          left: 0;
+          right: 0;
+        }
+        .autocomplete-items div {
+          padding: 10px;
+          cursor: pointer;
+          background-color: #fff;
+          border-bottom: 1px solid #d4d4d4;
+        }
+        .autocomplete-items div:hover {
+          /*when hovering an item:*/
+          background-color: #e9e9e9;
+        }
+        .autocomplete-active {
+          /*when navigating through the items using the arrow keys:*/
+          background-color: DodgerBlue !important;
+          color: #ffffff;
+        }
+    </style>
     <script>
+
+    /*
+
+    Interface t02 (name TBA) is version 2.0 of interface_alt.
+
+    The goal of this is to allow the user to essentially program the robots using pseudocode.
+    The commands are attempted to autocomplete as the user types, so that there is no confusion
+    as to what the list of commands is or what they can be.
+    There are convenient copy/paste options because most of the time, the robots will be following similar
+    algorithms, with only a slight change in values passed to them. The propsed design choice is to
+    show default commands with an X in place of a value, and set that value to be
+    random (when based on angles) or indefinitely/until a signal is recieved (when based on time).
+    For now, only input via the textbox and paste buttons is accepted.
+
+
+    TODO: show all commands when the focus is on an empty textbox.
+    TODO: delete, insert, and edit specific lines in the command list.
+
+    */
+
+    class CommandInput {
+        constructor(id){
+            this.id = id;
+        }
+    }
 
     var winH = window.innerHeight;
     var winW = window.innerWidth;
     var unit2px = ((winH < winW) ? (winH) : (winW))/8; //one unit is 1/8th of the screen
     var eventListener;
+    var numBots;
+    var miniBoxes = [];
+    var commands = [];
+    const commandsList = ['FollowWall', 'FollowWallFor X', 'GoOutAtAngle X', 'GoToCenter',
+                          'WaitFor X', 'Wait', 'WaitAverage', 'GoToExit'];
+
+    var copy = [];
 
     var titleArea = d3.select('body').append('svg')
         .attr('width', winW)
@@ -23,79 +121,171 @@
         .attr('y', unit2px/2)
         .attr('font-size', '48px')
         .attr('class', 'title');
-
-    var botArea = d3.select('body').append('svg')
-        .attr('float', 'left')
-        .attr('width', unit2px*6)
-        .attr('height', unit2px*6)
-        .style('border', '3px solid black')
-        .attr('class', 'outer');
-
-    var typeArea = d3.select('body').append('svg')
-        .attr('float', 'left')
-        .attr('width', unit2px*6)
-        .attr('height', unit2px*6)
-        .style('border', '3px solid black')
-        .attr('class', 'outer');
+    d3.select('body').append('p').text('Replace "X" in a command suggestion with a number to specify a value!');
 
 
+    function updateList(){
+        var numBots = document.getElementById('numBots').value;
+        d3.selectAll('.autocomplete').remove();
+        commands = [];
 
-    function updateUnit2Px() {
-        var tempScale = ((window.innerHeight < window.innerWidth) ?
-            (window.innerHeight) :
-            (window.innerWidth)) /8; //one unit is 1/8th of the screen
+        for (i=0; i<numBots;i++) {
+            commands.push([]);
+            var d = d3.select('body').append('div')
+                .style('width', unit2px*3+'px')
+                .style('height', unit2px*3+'px')
+                .attr('float', 'left')
+                .style('position', 'relative')
+                .style('overflow-y', 'scroll')
+                .attr('class', 'autocomplete')
+                .style('border', '1px black solid');
+            form = d.append('form')
+                .attr('id', 'idno'+i)
+                .attr('action', 'javascript:void(0)')
+                .attr('autocomplete', 'off');
+            list = d.append('ol');
+            var b = form.append('input')
+                .attr('type', 'text')
+                .attr('id', 'idno'+i)
+                .on('keydown', function() {
+                    if (event.keyCode == 13) {this.form.submit(); return false;}
+                });
 
-        var updates = d3.selectAll('.outer').each(function() {
-            var u = d3.select(this);
-            u.attr('width', +u.attr('width')*tempScale/unit2px)
-                .attr('height', tempScale*6);
-        });
+            form.append('input')
+                .attr('type', 'submit')
+                .property('value','Enter')
+                .on('click', function() {
+                    var l = +d3.select(this.parentNode).attr('id').length;
+                    //console.log(d3.select(this.parentNode).attr('id').substring(l-1));
+                    var s = d3.select(this.parentNode).attr('id').substring(l-1);
+                    var v = d3.select(this.parentNode).select('input').property('value');
+                    d3.select(this.parentNode).select('input').property('value','');
+                    console.log(v);
+                    commands[s].push(v);
+                    console.log(commands);
+                    d3.select(this.parentNode.parentNode).select('ol').append('li').text(v);//append('li').text(v);
+                });
+            form.append('input')
+                .attr('type', 'submit')
+                .property('value','X')
+                .attr('class', 'reset')
+                .on('click', function(){
+                    var idl = d3.select(this.parentNode).attr('id').length;
+                    var id = d3.select(this.parentNode).attr('id').substring(idl-1);
+                    commands[id] = [];
+                    console.log(commands);
+                    var divTemp = d3.select(this.parentNode.parentNode);
+                    divTemp.select('ol').remove();
+                    divTemp.append('ol');
+                });
 
-        var updates = d3.selectAll('.inner').each(function() {
-            var u = d3.select(this);
-            u.attr('x', +u.attr('x')*tempScale/unit2px)
-                .attr('y', +u.attr('y')*tempScale/unit2px)
-                .attr('width', +u.attr('width')*tempScale/unit2px)
-                .attr('height', +u.attr('height')*tempScale/unit2px);
-        });
-        unit2px = tempScale;
+            form.append('input')
+                .attr('type', 'submit')
+                .attr('class', 'copypaste')
+                .property('value', 'Copy')
+                .on('click', function() {
+                    var attrID = d3.select(this.parentNode).attr('id');
+                    var len = attrID.length;
+                    var id = attrID.substring(len - 1);
+                    copy = commands[id];
+                    console.log(copy);
+                });
 
-    }
+            form.append('input')
+                .attr('type', 'submit')
+                .attr('class', 'copypaste')
+                .property('value', 'Paste')
+                .on('click', function() {
+                    var attrID = d3.select(this.parentNode).attr('id');
+                    var len = attrID.length;
+                    var id = attrID.substring(len - 1);
+                    divTemp = d3.select(this.parentNode.parentNode);
+                    divTemp.select('ol').remove();
+                    divTemp.append('ol');
+                    for (i=0;i<copy.length;i++) {
+                        divTemp.select('ol').append('li').text(copy[i]);
+                    }
+                    commands[id] = copy;
+                });
 
-    /*function tempUpdate() {
-        var tempScale = ((window.innerHeight < window.innerWidth) ?
-            (window.innerHeight) :
-            (window.innerWidth)) /8; //one unit is 1/8th of the screen
+            //add all event listeners to inputs
+            autocomplete(b.node(), commandsList);
 
-        d3.select(botArea).selectAll().each(function() {
-            var hold = d3.select(this);
-            hold.attr('x', hold.attr('x')*tempScale/unit2px);
-            hold.attr('y', hold.attr('y')*tempScale/unit2px);
-            hold.attr('width', hold.attr('width')*tempScale/unit2px);
-            hold.attr('height', hold.attr('height')*tempScale/unit2px);
-        });
-        //unit2px = tempScale;
-    } */
-
-    for (i=1;i<6;i+=2) {
-        for (j=1;j<6;j+=2) {
-            botArea.append('rect')
-                .attr('x', unit2px*(j-1))
-                .attr('y', unit2px*(i-1))
-                .attr('width', unit2px*2)
-                .attr('height', unit2px*2)
-                .style('stroke', 'black')
-                .style('fill', 'none')
-                .attr('class', 'inner');
         }
     }
 
-    function Initialize() {
-        eventListener = setInterval(updateUnit2Px, 100);
+    function autocomplete(inp, arr) {
+      var currentFocus;
+      inp.addEventListener("input", function(e) {
+          var a, b, i, val = this.value;
+          closeAllLists();
+          if (!val) { return false;}
+          currentFocus = -1;
+          a = document.createElement("DIV");
+          a.setAttribute("id", this.id + "autocomplete-list");
+          a.setAttribute("class", "autocomplete-items");
+          this.parentNode.appendChild(a);
+          for (i = 0; i < arr.length; i++) {
+            if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
+              b = document.createElement("DIV");
+              b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+              b.innerHTML += arr[i].substr(val.length);
+              b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+                  b.addEventListener("click", function(e) {
+                  inp.value = this.getElementsByTagName("input")[0].value;
+                  closeAllLists();
+              });
+              a.appendChild(b);
+            }
+          }
+      });
+      inp.addEventListener("keydown", function(e) {
+          var x = document.getElementById(this.id + "autocomplete-list");
+          if (x) x = x.getElementsByTagName("div");
+          if (e.keyCode == 40) {
+            currentFocus++;
+            addActive(x);
+          } else if (e.keyCode == 38) { //up
+            currentFocus--;
+            addActive(x);
+          } else if (e.keyCode == 13) {
+            e.preventDefault();
+            if (currentFocus > -1) {
+              if (x) x[currentFocus].click();
+            }
+          }
+      });
+      function addActive(x) {
+        if (!x) return false;
+        removeActive(x);
+        if (currentFocus >= x.length) currentFocus = 0;
+        if (currentFocus < 0) currentFocus = (x.length - 1);
+        x[currentFocus].classList.add("autocomplete-active");
+      }
+      function removeActive(x) {
+        for (var i = 0; i < x.length; i++) {
+          x[i].classList.remove("autocomplete-active");
+        }
+      }
+      function closeAllLists(elmnt) {
+        var x = document.getElementsByClassName("autocomplete-items");
+        for (var i = 0; i < x.length; i++) {
+          if (elmnt != x[i] && elmnt != inp) {
+          x[i].parentNode.removeChild(x[i]);
+          }
+        }
+      }
+      document.addEventListener("click", function (e) {
+        closeAllLists(e.target);
+      });
     }
 
-    Initialize();
 
     </script>
+
+    <form style="margin:3%" action="javascript:void(0)"> <!-- this keeps the page from reloading-->
+        <input type='number' min=1 max=9 name='bots' id='numBots'/>
+        <input type='submit' name='Input the number of Bots to use...' onClick="updateList()"></button>
+    </form>
 </body>
 </html>
